migrated towards architecture 9; everything except append seems to be fine